@@ -1,5 +1,16 @@
 2014-06-17  Anders Carlsson  <andersca@apple.com>
 
+        Make it possible to use -[NSBundle classNamed:] to find WebKitLegacy classes
+        https://bugs.webkit.org/show_bug.cgi?id=134008
+        <rdar://problem/17037600>
+
+        Reviewed by Dan Bernstein.
+
+        * UIProcess/API/Cocoa/LegacyBundleForClass.mm: Added.
+        * WebKit2.xcodeproj/project.pbxproj:
+
+2014-06-17  Anders Carlsson  <andersca@apple.com>
+
         Expose the location of website data
         https://bugs.webkit.org/show_bug.cgi?id=134000
         <rdar://problem/17350498>
